--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,11 @@
 #find{
     margin-top: 5px;
 }
-
+.prompt_box{
+    position: relative;
+    margin-left: 8px;
+    top:5px;
+}
 .left-navigation-label
 {
     position:absolute;
